RESOLVED FIXED178842
Fix issues with WebView subframe painting
https://bugs.webkit.org/show_bug.cgi?id=178842
Summary Fix issues with WebView subframe painting
Simon Fraser (smfr)
Reported 2017-10-25 18:51:15 PDT
Fix issues with WebView subframe painting
Attachments
Patch (4.54 KB, patch)
2017-10-25 18:53 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2017-10-25 18:53:17 PDT
Daniel Bates
Comment 2 2017-10-25 20:28:37 PDT
Comment on attachment 324940 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=324940&action=review > Source/WebKitLegacy/mac/ChangeLog:11 > + WebHTMLView overrides some NSView internal methods to make sure that AppKit doesn't paint > + subframes (WebKit controls subframe painting). The method signature of one of these changed in macOS > + High Sierra, so match the new signature. Is there an equivalent to C++11's override keyword to help us catch such changes in the future and/or can we write a unit test to ensure this does not regress?
Simon Fraser (smfr)
Comment 3 2017-10-26 10:36:42 PDT
(In reply to Daniel Bates from comment #2) > Comment on attachment 324940 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=324940&action=review > > > Source/WebKitLegacy/mac/ChangeLog:11 > > + WebHTMLView overrides some NSView internal methods to make sure that AppKit doesn't paint > > + subframes (WebKit controls subframe painting). The method signature of one of these changed in macOS > > + High Sierra, so match the new signature. > > Is there an equivalent to C++11's override keyword to help us catch such > changes in the future and/or can we write a unit test to ensure this does > not regress? The only think I can think of is a runtime assertion that NSView implements certain functions.
WebKit Commit Bot
Comment 4 2017-10-26 13:13:51 PDT
Comment on attachment 324940 [details] Patch Clearing flags on attachment: 324940 Committed r224040: <https://trac.webkit.org/changeset/224040>
WebKit Commit Bot
Comment 5 2017-10-26 13:13:52 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2017-11-15 12:43:44 PST
Note You need to log in before you can comment on or make changes to this bug.