Fix issues with WebView subframe painting https://bugs.webkit.org/show_bug.cgi?id=178842 rdar://problem/34072253

Reviewed by Daniel Bates.

WebHTMLView overrides some NSView internal methods to make sure that AppKit doesn't paint
subframes (WebKit controls subframe painting). The method signature of one of these changed in macOS
High Sierra, so match the new signature.

Also rename the 'rect' param to 'displayRect' to match AppKit code.

* WebView/WebHTMLView.mm:
(-[WebHTMLView _recursive:displayRectIgnoringOpacity:inGraphicsContext:shouldChangeFontReferenceColor:_recursive:displayRectIgnoringOpacity:inGraphicsContext:CGContext:topView:shouldChangeFontReferenceColor:]):
(-[WebHTMLView _recursive:displayRectIgnoringOpacity:inGraphicsContext:CGContext:shouldChangeFontReferenceColor:_recursive:displayRectIgnoringOpacity:inGraphicsContext:CGContext:topView:shouldChangeFontReferenceColor:]): Deleted.


Canonical link: https://commits.webkit.org/195031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224040 268f45cc-cd09-0410-ab3c-d52691b4dbfc